--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
             <button type="submit" class="save-button">Сохранить</button>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
