Михаил Бутырский, проектная работа 4, третья версия

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <button class="popup__close-button" type="button"></button>
             <p class="popup__header">Редактировать профиль</p>
             <form name="profile-info">
-                <input class="popup__inputs popup__input_name" type="text" name="name">
-                <input class="popup__inputs popup__input_about" type="text" name="about">
+                <input class="popup__inputs popup__inputs_name" type="text" name="name">
+                <input class="popup__inputs popup__inputs_about" type="text" name="about">
                 <button type="submit" class="popup__save-button">Сохранить</button>
             </form>
         </div>
