--- a/index.html
+++ b/index.html
@@ -26,56 +26,14 @@
                 <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements page__elements">
-                <article class="element">
-                    <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.png" alt="Фото места">
-                    <div class="element__caption">
-                        <h2 class="element__name">Карачаевск</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div>
-                    <button class="element__delete-button" type="button"></button>
-                </article>
-                <article class="element">
-                    <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.png" alt="Фото места">
-                    <div class="element__caption">
-                        <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.png" alt="Фото места">
-                    <div class="element__caption">
-                        <h2 class="element__name">Домбай</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.png" alt="Фото места">
-                    <div class="element__caption">
-                        <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.png" alt="Фото места">
-                    <div class="element__caption">
-                        <h2 class="element__name">Домбай</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.png" alt="Фото места">
-                    <div class="element__caption">
-                        <h2 class="element__name">Карачаево-Черкесия</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div>
-                </article>
+
             </section>
         </main>
         <footer class="footer page__footer">
             <p class="copyright">© 2020 Mesto Russia</p>
         </footer>
     </div>
-    <div class="popup">
+    <div class="popup" id="popup_profile">
         <div class="popup__container">
             <button class="popup__close-button" type="button"></button>
             <p class="popup__header">Редактировать профиль</p>
@@ -86,19 +44,19 @@
             </form>
         </div>
     </div>
-    <div class="popup">
+    <div class="popup" id="popup_elements">
         <div class="popup__container">
             <button class="popup__close-button" type="button"></button>
             <p class="popup__header">Новое место</p>
-            <form name="profile-info">
+            <form name="element-content">
                 <input class="popup__inputs popup__inputs_type_place" type="text" name="place" placeholder="Название">
                 <input class="popup__inputs popup__inputs_type_picture" type="text" name="picture" placeholder="Ссылка на картинку">
                 <button type="submit" class="popup__create-button">Создать</button>
             </form>
         </div>
     </div>
-    <template>
-        <article class="element" id="element-template">
+    <template class="element-template">
+        <article class="element">
             <img class="element__picture" src="" alt="Фото места">
             <div class="element__caption">
                 <h2 class="element__name"></h2>
