--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
     <div class="popup__container">
         <button class="popup__close-button" type="button" id="profile-close-button"></button>
         <p class="popup__header">Редактировать профиль</p>
-        <form name="profile-info">
-            <input class="popup__inputs popup__inputs_type_name" type="text" name="name">
-            <input class="popup__inputs popup__inputs_type_about" type="text" name="about">
+        <form class="form" name="profile-info" novalidate>
+            <input class="popup__inputs popup__inputs_type_name" id="name-input" type="text" name="name" required
+                   minlength="2" maxlength="40">
+            <span class="popup__inputs-error name-input-error"></span>
+            <input class="popup__inputs popup__inputs_type_about" id="about-input" type="text" name="about" required
+                   minlength="2" maxlength="200">
+            <span class="popup__inputs-error about-input-error"></span>
             <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
     </div>
@@ -48,10 +52,13 @@
     <div class="popup__container">
         <button class="popup__close-button" type="button" id="elements-close-button"></button>
         <p class="popup__header">Новое место</p>
-        <form name="element-content">
-            <input class="popup__inputs popup__inputs_type_place" type="text" name="place" placeholder="Название">
-            <input class="popup__inputs popup__inputs_type_picture" type="text" name="picture"
-                   placeholder="Ссылка на картинку">
+        <form class="form" name="element-content" novalidate>
+            <input class="popup__inputs popup__inputs_type_place" id="place-input" type="text" name="place"
+                   placeholder="Название" required minlength="2" maxlength="30">
+            <span class="popup__inputs-error place-input-error"></span>
+            <input class="popup__inputs popup__inputs_type_picture" id="picture-input" type="url" name="picture"
+                   placeholder="Ссылка на картинку" required>
+            <span class="popup__inputs-error picture-input-error"></span>
             <button type="submit" class="popup__create-button">Создать</button>
         </form>
     </div>
@@ -74,5 +81,6 @@
     </article>
 </template>
 <script src="./scripts/script.js"></script>
+<script src="./scripts/validate.js"></script>
 </body>
 </html>
