Михаил Бутырский, проектная работа 6, промежуточная версия 2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input class="popup__inputs popup__inputs_type_about" id="about-input" type="text" name="about" required
                    minlength="2" maxlength="200">
             <span class="popup__inputs-error about-input-error"></span>
-            <button type="submit" class="popup__save-button">Сохранить</button>
+            <button type="submit" class="popup__save-button popup__submit-button">Сохранить</button>
         </form>
     </div>
 </div>
@@ -59,7 +59,7 @@
             <input class="popup__inputs popup__inputs_type_picture" id="picture-input" type="url" name="picture"
                    placeholder="Ссылка на картинку" required>
             <span class="popup__inputs-error picture-input-error"></span>
-            <button type="submit" class="popup__create-button">Создать</button>
+            <button type="submit" class="popup__create-button popup__submit-button">Создать</button>
         </form>
     </div>
 </div>
