--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <button class="element__delete-button" type="button"></button>
     </article>
 </template>
-<script src="./scripts/script.js"></script>
+<script src="scripts/initial-сards.js"></script>
 <script src="./scripts/validate.js"></script>
+<script src="./scripts/script.js"></script>
 </body>
 </html>
