Михаил Бутырский, проектная работа 6, версия 2

--- a/index.html
+++ b/index.html
@@ -65,14 +65,17 @@
 </div>
 <div class="popup" id="popup_picture">
     <div class="popup__picture-container">
-        <img class="popup__picture" src="" alt="">
+        <img class="popup__picture" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"
+             alt="">
         <button class="popup__close-button" type="button" id="picture-close-button"></button>
         <p class="popup__caption"></p>
     </div>
 </div>
 <template class="element-template">
     <article class="element">
-        <button class="element__open-picture-button" type="button"><img class="element__picture" src="" alt=""></button>
+        <button class="element__open-picture-button" type="button"><img class="element__picture"
+                                                                        src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"
+                                                                        alt=""></button>
         <div class="element__caption">
             <h2 class="element__name"></h2>
             <button class="element__like-button" type="button"></button>
