--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
         <button class="element__delete-button" type="button"></button>
     </article>
 </template>
-<script src="scripts/initial-сards.js"></script>
+<script src="./scripts/initial-сards.js"></script>
 <script src="./scripts/validate.js"></script>
-<script src="./scripts/script.js"></script>
+<script src="./scripts/index.js" type="module"></script>
+<script src="./scripts/Card.js" type="module"></script>
+<script src="./scripts/FormValidator.js" type="module"></script>
+<script src="./scripts/utils.js" type="module"></script>
 </body>
 </html>
