Михаил Бутырский, проектная работа 8, версия 1

--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@
         <button class="element__delete-button" type="button"></button>
     </article>
 </template>
-<script src="./scripts/initial-сards.js"></script>
-<script src="./scripts/index.js" type="module"></script>
-<script src="./scripts/Card.js" type="module"></script>
-<script src="./scripts/FormValidator.js" type="module"></script>
+<script src="./scripts/pages/index.js" type="module"></script>
 </body>
 </html>
