--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="pages/index.css">
     <title>Место</title>
 </head>
 <body class="root">
 <div class="page root__page">
     <header class="header page__header">
-        <img class="header__logo" src="./images/logo.svg" alt="Лого проекта">
+        <img class="header__logo" src="images/logo.svg" alt="Лого проекта">
     </header>
     <main>
         <section class="profile page__profile">
             <div class="profile__info">
-                <img class="profile__avatar" src="./images/photo.jpg" alt="Аватар">
+                <img class="profile__avatar" src="images/photo.jpg" alt="Аватар">
                 <div class="profile__inputs">
                     <div class="profile__name-with-button">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -83,6 +83,6 @@
         <button class="element__delete-button" type="button"></button>
     </article>
 </template>
-<script src="./scripts/pages/index.js" type="module"></script>
+<script src="./index.js" type="module"></script>
 </body>
 </html>
