Михаил Бутырский, проектная работа 8, версия 1

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
 <body class="root">
 <div class="page root__page">
     <header class="header page__header">
-        <img class="header__logo" src="images/logo.svg" alt="Лого проекта">
+        <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Лого проекта">
     </header>
     <main>
         <section class="profile page__profile">
             <div class="profile__info">
-                <img class="profile__avatar" src="images/photo.jpg" alt="Аватар">
+                <img class="profile__avatar" src="<%=require('./images/photo.jpg')%>" alt="Аватар">
                 <div class="profile__inputs">
                     <div class="profile__name-with-button">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
