Михаил Бутырский, проектная работа 9, версия 2

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
     <div class="popup__container">
         <button class="popup__close-button" type="button" id="delete-close-button"></button>
         <p class="popup__header">Вы уверены?</p>
-            <button type="submit" class="popup__delete-button popup__submit-button popup__create-button">Да</button>
+        <form class="form" name="confirmation" novalidate><button type="submit" class="popup__delete-button popup__submit-button popup__create-button">Да</button></form>>
     </div>
 </div>
 
