--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,10 @@
         <button class="popup__close-button" type="button" id="elements-close-button"></button>
         <p class="popup__header">Новое место</p>
         <form class="form" name="element-content" novalidate>
-            <input class="popup__inputs popup__inputs_type_place" id="place-input" type="text" name="place"
+            <input class="popup__inputs popup__inputs_type_place" id="place-input" type="text" name="name"
                    placeholder="Название" required minlength="2" maxlength="30">
             <span class="popup__inputs-error place-input-error"></span>
-            <input class="popup__inputs popup__inputs_type_picture" id="picture-input" type="url" name="picture"
+            <input class="popup__inputs popup__inputs_type_picture" id="picture-input" type="url" name="link"
                    placeholder="Ссылка на картинку" required>
             <span class="popup__inputs-error picture-input-error"></span>
             <button type="submit" class="popup__create-button popup__submit-button">Создать</button>
